# FungEyeIoT

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  tests.cpp
.github/workflows/: fortest.yml  testenvironment.yml
SEP4_IOT/: SEP4_IOT.atsln
SEP4_IOT/SEP4_IOT/: SEP4_IOT.componentinfo.xml  SEP4_IOT.cproj  main.c
SEP4_IOT/SEP4_IOT/Debug/: Makefile  SEP4_IOT.lss  SEP4_IOT.srec  makedep.mk
SEP4_IOT/SEP4_IOT/Main/: CO2.c  CO2.h  HumidityTemperature.c  HumidityTemperature.h  main.c
SEP4_IOT/SEP4_IOT/Main/headerFiles/: CO2.h  HumidityTemperature.h  Light.h  LoRaWANHandler.h  Servo.h  definitions.h
SEP4_IOT/SEP4_IOT/Main/srcFiles/: CO2.c  HumidityTemperature.c  Light.c  LoRaWANHandler.c  Servo.c  main.c
SEP4_IOT/SEP4_IOT/drivers/Example/: LoRaWANHandler.c  main.c
SEP4_IOT/SEP4_IOT/drivers/Example/tests/: CMakelists.txt
test/: CMakeLists.txt  testForCO2.cpp  testForHumTemp.cpp  testForLight.cpp  testForLoraHandler.cpp  testForServo.cpp  tests.cpp
test/Servo_defs/: servo_defs.cpp  servo_defs.h
tests/: CMakeLists.txt
